fix layout issues

--- a/src/app/components/search/search-input/search-input.component.scss
+++ b/src/app/components/search/search-input/search-input.component.scss
@@ -1,4 +1,5 @@
 .search-input-container {
-  margin-top: 20px;
-  margin-left: 20px;
+  padding-top: 13px;
+  padding-left: 20px;
+  height: 7vh;
 }
