--- a/src/app/components/search/search-results/search-results.component.scss
+++ b/src/app/components/search/search-results/search-results.component.scss
@@ -1,9 +1,10 @@
 .mat-list-base {
   padding: 0;
 }
+
 virtual-scroller {
   width: 100%;
-  height: 74vh;
+  height: 79vh;
 }
 
 .virtual-item {
